<resources>
    <string name="app_name">安博娱乐</string>
    <string name="__minute_ago">%1$d分钟前</string>
    <string name="__second_ago">%1$d秒前</string>
    <string name="account">账号</string>
    <string name="account_yue">账户余额：</string>
    <string name="add_card_first">您暂时未绑定银行卡，请前往绑定。</string>
    <string name="advance_money">晋级彩金</string>
    <string name="agentNew">直属代理新增：</string>
    <string name="alipay_recharge">支付宝账号复制成功,请求跳转支付宝</string>
    <string name="all">所有</string>
    <string name="all_paltform">所有平台</string>
    <string name="all_time">全部时间</string>
    <string name="amount_all">—合计—</string>
    <string name="app_last_new_vesion">APP已是最新版本</string>
    <string name="app_replace_tips">"温馨提示：为了给您带来极致的游戏体验，本次需要更新APP，请您谅解！
APP更新完成预计耗时3分钟！"</string>
    <string name="bad_network">服务器异常</string>
    <string name="bank_name">银行名字</string>
    <string name="bank_tips">提示：请正确选定开户行，并绑定真实姓名，结算时将直接转入此账号，为了您的资金安全，绑定不可随意更改，如需修改，请联系客服人员。</string>
    <string name="basic_information">基础信息</string>
    <string name="bei_zhu">备注：</string>
    <string name="bet_time">投注时间</string>
    <string name="birthday_1">生日：</string>
    <string name="can_get_money">可提取佣金:</string>
    <string name="cancel">取消</string>
    <string name="cao_zuo">操作</string>
    <string name="card_name">持卡人姓名</string>
    <string name="card_num">银行卡账号</string>
    <string name="charge_the_second">第二步:填写转账信息，点击我已转账。</string>
    <string name="chose_bank">选择银行</string>
    <string name="cilck_lianxi_kefu">点我联系客服</string>
    <string name="cilck_recharge_jinelianxi_kefu">点我联系客服</string>
    <string name="ck_info">存款信息</string>
    <string name="ck_jine">存款金额</string>
    <string name="ck_shuoming_1">以上银行账户限本次存款用，账户不定期更换每次存款前请依照本页所显示的银行账户入款如入款至已过期账号，无法查收，本公司恕不负责！</string>
    <string name="ck_step_1">第一步： 复制收款银行前往充值</string>
    <string name="ck_step_2">第二步： 充值完成，填写您的存款信息。最后，提交充值</string>
    <string name="ck_tips">注：收款信息仅限本次使用！</string>
    <string name="clearn_detail">清空记录</string>
    <string name="connect_error">网络连接失败,请检查网络</string>
    <string name="connect_timeout">连接超时,请稍后再试</string>
    <string name="container_using">柜号或车牌号正在使用中</string>
    <string name="contans_us">联系方式</string>
    <string name="copy">复制</string>
    <string name="copy_success">复制成功</string>
    <string name="current_hui_yuan_level">当前会员等级：</string>
    <string name="current_level">当前推广等级:</string>
    <string name="current_location">当前：</string>
    <string name="current_location_">当前：%1$s</string>
    <string name="da_ma_liang">打码量</string>
    <string name="day">天</string>
    <string name="day__">日</string>
    <string name="deal_status">交易状态</string>
    <string name="deal_time">交易时间</string>
    <string name="define_roundedimageview" />
    <string name="delete">删除</string>
    <string name="description">描述</string>
    <string name="detail">详情</string>
    <string name="device_id_null">设备号有误，请重新输入</string>
    <string name="device_using">设备正在使用中</string>
    <string name="directNew">直属人数新增：</string>
    <string name="directly_agent">直属代理:</string>
    <string name="directly_agent2">直属代理(新增):</string>
    <string name="directly_count">直属人数</string>
    <string name="directly_num">直属人数:</string>
    <string name="directly_num2">直属人数(新增):</string>
    <string name="directly_total_flow">今日总流水:</string>
    <string name="discount_1">优惠：</string>
    <string name="edit">编辑</string>
    <string name="email">邮箱</string>
    <string name="email_1">邮箱：</string>
    <string name="error_account">账号由6–14位字母或数字组成</string>
    <string name="error_mail">邮箱格式错误</string>
    <string name="error_name">名字必须为中文</string>
    <string name="error_no_exist">请求不存在</string>
    <string name="error_no_login">您尚未登录</string>
    <string name="error_pwd">密码由6-12位字母加数字组成</string>
    <string name="error_pwd_again">请确认密码</string>
    <string name="error_pwd_again_no">两次密码不一致</string>
    <string name="error_qq">QQ由5到10位数字组成</string>
    <string name="error_repair">该游戏维护中</string>
    <string name="error_repairing">系统维护中</string>
    <string name="error_retry_login">该账号已在其他地方登录，您被挤下线了，请重新登录</string>
    <string name="error_systeme_error">系统出现异常</string>
    <string name="error_verify_null">验证码图片为空</string>
    <string name="et_order_alipay">输入支付宝名称或订单号后四位</string>
    <string name="et_order_wechat">输入微信名称或订单号后四位</string>
    <string name="fan_dian_zonge">返点总额</string>
    <string name="fan_shui_1">返水：</string>
    <string name="forget_pwd">忘记密码？</string>
    <string name="friday">周五</string>
    <string name="friends">朋友圈</string>
    <string name="game">游戏</string>
    <string name="game_hint">请输入游戏名称</string>
    <string name="game_platform">游戏平台</string>
    <string name="get_max_bili">可享受最高比例</string>
    <string name="give_up_fail">放弃失败</string>
    <string name="gong_xian_1">贡献人数</string>
    <string name="gx_money">贡献投注量(元)</string>
    <string name="gx_number_account">贡献的成员账号</string>
    <string name="have_no_account">没有账号，</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint">提示</string>
    <string name="hint_chose_bank">请选择银行卡</string>
    <string name="hint_input_car_num">请输入银行卡号</string>
    <string name="hint_input_email">请输入邮箱</string>
    <string name="hint_input_open_addr">请输入银行卡开户地址</string>
    <string name="hint_input_qq">请输入QQ</string>
    <string name="hint_input_weixin">请输入微信</string>
    <string name="history_total_money">历史总佣金:</string>
    <string name="hui_yuan_search">会员查询：</string>
    <string name="id">ID</string>
    <string name="id_detail">ID:</string>
    <string name="id_directly_time">注册日期:</string>
    <string name="id_search">ID搜索</string>
    <string name="input_charge_jine">请输入充值金额</string>
    <string name="input_hui_yuan_id">输入你要查询的会员id</string>
    <string name="input_name_card_number">请输入姓名或卡号后四位</string>
    <string name="input_pwd_again">请再次输入密码</string>
    <string name="input_telephone">请输入您的电话号码</string>
    <string name="input_verify_code">请输入验证码</string>
    <string name="install_alipay">请先安装支付宝！</string>
    <string name="install_wx">请先安装微信！</string>
    <string name="last_login_time">上次登录时间</string>
    <string name="last_settlement_time">上次结算时间</string>
    <string name="lately">最近</string>
    <string name="level_get">当前等级可领取</string>
    <string name="level_rights">等级特权</string>
    <string name="library_roundedimageview_author">Vince Mi</string>
    <string name="library_roundedimageview_authorWebsite">https://github.com/vinc3m1</string>
    <string name="library_roundedimageview_isOpenSource">true</string>
    <string name="library_roundedimageview_libraryDescription">A fast ImageView (and Drawable) that supports rounded corners (and ovals or circles) based on the original example from Romain Guy.</string>
    <string name="library_roundedimageview_libraryName">RoundedImageView</string>
    <string name="library_roundedimageview_libraryVersion">1.3.0</string>
    <string name="library_roundedimageview_libraryWebsite">https://github.com/vinc3m1/RoundedImageView</string>
    <string name="library_roundedimageview_licenseId">apache_2_0</string>
    <string name="library_roundedimageview_repositoryLink">https://github.com/vinc3m1/RoundedImageView.git</string>
    <string name="list_data_null">没有历史记录</string>
    <string name="liu_shui_time">流水时间</string>
    <string name="liu_shui_yan_chi">由于注单延迟，流水的状态会延迟更新。</string>
    <string name="liushui_zhuang_tai">流水状态</string>
    <string name="load_end">没有更多数据</string>
    <string name="load_failed">加载失败，请点我重试</string>
    <string name="loading">正在加载中...</string>
    <string name="loading_data">loading…</string>
    <string name="local_today">今天</string>
    <string name="local_yesterday">昨天</string>
    <string name="location_fail">暂未获取到位置信息</string>
    <string name="login_again">请重新登录</string>
    <string name="login_fail">用户名或密码错误</string>
    <string name="logout_sure">确定要退出登录吗</string>
    <string name="makesure_new_pwd">确认新密码：</string>
    <string name="makesure_pwd">确认密码</string>
    <string name="monday">周一</string>
    <string name="money_get_out">可提现佣金:</string>
    <string name="month">月</string>
    <string name="most_recharge_jine">玩家常玩的充值金额</string>
    <string name="myId">我的ID：</string>
    <string name="my_commin_total_record">一共%s单</string>
    <string name="my_yong_jing">所得佣金(元)</string>
    <string name="name_1">姓名：</string>
    <string name="name_2">姓名</string>
    <string name="name_card">姓名须和绑定的银行卡户名一致</string>
    <string name="next_level">下一等级</string>
    <string name="ni_cheng">昵称</string>
    <string name="no_data_to_game">您暂时还没有任何数据 先去游戏下吧</string>
    <string name="no_requirements">您暂未达到要求，达到后即可领取</string>
    <string name="notice">(此数据仅供参考)</string>
    <string name="null_error_toast">请填写完整</string>
    <string name="open_addr">开户地址</string>
    <string name="order_number">订单号</string>
    <string name="outmoney">请输入转出金额！</string>
    <string name="output_jine_already">已转出佣金：</string>
    <string name="output_money">转出佣金(元)</string>
    <string name="pai_cai_time">派彩时间</string>
    <string name="pai_cai_zonge">派彩总额</string>
    <string name="parse_error">解析服务器响应数据失败</string>
    <string name="pickerview_cancel">取消</string>
    <string name="pickerview_day">日</string>
    <string name="pickerview_hours">时</string>
    <string name="pickerview_minutes">分</string>
    <string name="pickerview_month">月</string>
    <string name="pickerview_seconds">秒</string>
    <string name="pickerview_submit">确定</string>
    <string name="pickerview_year">年</string>
    <string name="please_add_cards">您暂时未绑定银行卡，请前往绑定。</string>
    <string name="please_download">请先安装QQ</string>
    <string name="please_forgive_me">给您带来的不便敬请谅解！</string>
    <string name="please_input_account">请输入您的账号</string>
    <string name="please_input_card_name">请输入持卡人姓名</string>
    <string name="please_input_pwd">请输入密码</string>
    <string name="please_login_first">请登录</string>
    <string name="please_receive">已派发到您的钱包 请查收</string>
    <string name="pwd">密码</string>
    <string name="pwd_new">新密码：</string>
    <string name="pwd_now">现密码：</string>
    <string name="qipai_account">余额:%s</string>
    <string name="qipai_title" formatted="false">%s，总共%s款小游戏</string>
    <string name="qp_bao_biao">棋牌报表</string>
    <string name="qp_game_huodong">棋牌游戏活动</string>
    <string name="qq">QQ</string>
    <string name="qq_1">QQ：</string>
    <string name="qq_recharge">QQ号复制成功,请求跳转QQ</string>
    <string name="qx_number_account">旗下成员账号</string>
    <string name="really_name">真实姓名</string>
    <string name="rechange_card">更换银行卡></string>
    <string name="recharge_1">充值：</string>
    <string name="recharge_alipay_account">支付宝账号</string>
    <string name="recharge_all">总充值</string>
    <string name="recharge_all_status">全部状态</string>
    <string name="recharge_all_time">全部时间</string>
    <string name="recharge_all_type">全部类型</string>
    <string name="recharge_bank_offline">转账信息不能为空!</string>
    <string name="recharge_jin_e">充值金额</string>
    <string name="recharge_jine">金额</string>
    <string name="recharge_qu_jian">充值金额必须在 %s 之间!</string>
    <string name="recharge_shuo_ming">---- 说明 ----</string>
    <string name="register_account">请输入6–14位字母或数字</string>
    <string name="register_reg_pwd">输入6-12位字母、数字的密码</string>
    <string name="register_time">注册时间</string>
    <string name="send_verify_code">发送验证码</string>
    <string name="status">状态</string>
    <string name="telephone_num">手机号</string>
    <string name="verify_code">验证码</string>
    <string name="vx_number">微信号</string>
    <string name="xima_all_games">全部游戏</string>
    <string name="xima_bi_li">洗码比例</string>
    <string name="xima_bili">比例</string>
    <string name="xima_jine">洗码金额</string>
    <string name="xima_level">等级</string>
    <string name="xima_liang">洗码量</string>
    <string name="xima_range">洗码范围</string>
    <string name="xima_time">洗码时间</string>
    <string name="xima_total_amount">游戏洗码量</string>
</resources>