<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_item_member"
    android:layout_width="fill_parent"
    android:layout_height="@dimen/dp_30"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/tv_lastLoginTime"
        style="@style/ListItem"
        android:layout_width="0.0dip"
        android:layout_height="fill_parent"
        android:layout_weight="2.0"
        android:text="@string/last_login_time" />

    <TextView
        android:id="@+id/tv_registerTime"
        style="@style/ListItem"
        android:layout_width="0.0dip"
        android:layout_height="fill_parent"
        android:layout_weight="2.0"
        android:text="@string/register_time" />

    <TextView
        android:id="@+id/tv_member_count"
        style="@style/ListItem"
        android:layout_width="0.0dip"
        android:layout_height="fill_parent"
        android:layout_weight="2.0"
        android:text="@string/qx_number_account" />

    <TextView
        android:id="@+id/tv_level"
        style="@style/ListItem"
        android:layout_width="0.0dip"
        android:layout_height="fill_parent"
        android:layout_weight="1.0"
        android:text="@string/xima_level" />

    <TextView
        android:id="@+id/tv_totalRecharge"
        style="@style/TextTypeYellow"
        android:layout_width="0.0dip"
        android:layout_height="fill_parent"
        android:layout_weight="1.0"
        android:text="@string/recharge_all" />
</LinearLayout>