<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_item_recorder"
    android:layout_width="fill_parent"
    android:layout_height="@dimen/dp_30"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/tv_createTime"
        style="@style/ListItem"
        android:layout_width="0.0dip"
        android:layout_height="fill_parent"
        android:layout_weight="2.0"
        android:text="@string/deal_time" />

    <TextView
        android:id="@+id/tv_order"
        style="@style/ListItem"
        android:layout_width="0.0dip"
        android:layout_height="fill_parent"
        android:layout_weight="2.0"
        android:maxLines="1"
        android:text="@string/order_number" />

    <TextView
        android:id="@+id/tv_money"
        style="@style/ListItem"
        android:layout_width="0.0dip"
        android:layout_height="fill_parent"
        android:layout_weight="2.0"
        android:text="@string/output_money" />

    <TextView
        android:id="@+id/tv_status"
        style="@style/ListItem"
        android:layout_width="0.0dip"
        android:layout_height="wrap_content"
        android:layout_weight="1.0"
        android:text="@string/status" />
</LinearLayout>