<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_xima_proportion"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_xima_proportion_grade_item"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/pc_dark_golden_bg"
        android:gravity="center"
        android:paddingTop="@dimen/dp_5"
        android:paddingBottom="@dimen/dp_5"
        android:text="@string/next_level"
        android:textColor="@color/pc_dark_yellow"
        android:textSize="@dimen/sp_11" />

    <LinearLayout
        android:id="@+id/ll_xima_proportion_grade"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/dp_30">

        <TextView
            android:id="@+id/tv_xima_scope_item"
            style="@style/ListItem"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:text="@string/xima_range" />

        <TextView
            android:id="@+id/tv_xima_grade_item"
            style="@style/ListItem"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:text="@string/xima_level" />

        <TextView
            android:id="@+id/tv_xima_proportion_item"
            style="@style/TextTypeYellow"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:text="@string/xima_bi_li" />
    </LinearLayout>
</LinearLayout>