<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_xima_history"
    android:layout_width="fill_parent"
    android:layout_height="@dimen/dp_30"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/tv_xima_time"
        style="@style/ListItem"
        android:layout_width="0.0dip"
        android:layout_height="fill_parent"
        android:layout_weight="1.0"
        android:text="@string/xima_time" />

    <TextView
        android:id="@+id/tv_xima_liang"
        style="@style/ListItem"
        android:layout_width="0.0dip"
        android:layout_height="fill_parent"
        android:layout_weight="1.0"
        android:text="@string/xima_liang" />

    <TextView
        android:id="@+id/tv_xima_amount"
        style="@style/TextAmountYellow"
        android:layout_width="0.0dip"
        android:layout_height="fill_parent"
        android:layout_weight="1.0"
        android:text="@string/xima_jine" />

    <ImageButton
        android:id="@+id/ib_detail"
        android:layout_width="0.0dip"
        android:layout_height="fill_parent"
        android:layout_weight="1.0"
        android:background="@null"
        android:padding="@dimen/dp_8"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_arrow" />
</LinearLayout>