<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_gravity="center"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_15">

        <TextView
            android:textSize="@dimen/sp_14"
            android:textColor="@color/head_color"
            android:gravity="center|right"
            android:layout_width="@dimen/dp_60"
            android:layout_height="fill_parent"
            android:text="@string/account" />

        <EditText
            android:textSize="@dimen/sp_11"
            android:textColor="#ffffffff"
            android:textColorHint="@color/hint_color"
            android:id="@+id/et_account"
            android:background="@drawable/ic_input_bg"
            android:layout_width="@dimen/dp_262"
            android:layout_height="@dimen/dp_30"
            android:hint="@string/register_account"
            android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
            android:inputType="text"
            android:windowSoftInputMode="stateAlwaysHidden"
            android:imeOptions="flagNoExtractUi"
            android:paddingStart="@dimen/dp_10"
            android:layout_marginStart="@dimen/dp_15" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_15">

        <TextView
            android:textSize="@dimen/sp_14"
            android:textColor="@color/head_color"
            android:gravity="center|right"
            android:layout_width="@dimen/dp_60"
            android:layout_height="fill_parent"
            android:text="@string/pwd" />

        <EditText
            android:textSize="@dimen/sp_11"
            android:textColor="#ffffffff"
            android:textColorHint="@color/hint_color"
            android:id="@+id/et_user_pwd"
            android:background="@drawable/ic_input_bg"
            android:layout_width="@dimen/dp_262"
            android:layout_height="@dimen/dp_30"
            android:hint="@string/register_reg_pwd"
            android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
            android:inputType="textPassword"
            android:imeOptions="flagNoExtractUi"
            android:paddingStart="@dimen/dp_10"
            android:layout_marginStart="@dimen/dp_15" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_15">

        <TextView
            android:textSize="@dimen/sp_14"
            android:textColor="@color/head_color"
            android:gravity="center|right"
            android:layout_width="@dimen/dp_60"
            android:layout_height="fill_parent"
            android:text="@string/makesure_pwd" />

        <EditText
            android:textSize="@dimen/sp_11"
            android:textColor="#ffffffff"
            android:textColorHint="@color/hint_color"
            android:id="@+id/et_user_pwd_again"
            android:background="@drawable/ic_input_bg"
            android:layout_width="@dimen/dp_262"
            android:layout_height="@dimen/dp_30"
            android:hint="@string/input_pwd_again"
            android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
            android:inputType="textPassword"
            android:imeOptions="flagNoExtractUi"
            android:paddingStart="@dimen/dp_10"
            android:layout_marginStart="@dimen/dp_15" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/ll_user_input_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_15">

        <TextView
            android:textSize="@dimen/sp_14"
            android:textColor="@color/head_color"
            android:gravity="center|right"
            android:layout_width="@dimen/dp_60"
            android:layout_height="fill_parent"
            android:text="@string/telephone_num" />

        <EditText
            android:textSize="@dimen/sp_11"
            android:textColor="#ffffffff"
            android:textColorHint="@color/hint_color"
            android:id="@+id/et_user_phone"
            android:background="@drawable/ic_input_bg"
            android:layout_width="@dimen/dp_262"
            android:layout_height="@dimen/dp_30"
            android:hint="@string/input_telephone"
            android:maxLength="11"
            android:inputType="number"
            android:imeOptions="flagNoExtractUi"
            android:paddingStart="@dimen/dp_10"
            android:layout_marginStart="@dimen/dp_15" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/ll_user_name_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_15">

        <TextView
            android:textSize="@dimen/sp_14"
            android:textColor="@color/head_color"
            android:gravity="center|right"
            android:layout_width="@dimen/dp_60"
            android:layout_height="fill_parent"
            android:text="@string/really_name" />

        <EditText
            android:textSize="@dimen/sp_11"
            android:textColor="#ffffffff"
            android:textColorHint="@color/hint_color"
            android:id="@+id/et_name"
            android:background="@drawable/ic_input_bg"
            android:layout_width="@dimen/dp_262"
            android:layout_height="@dimen/dp_30"
            android:hint="@string/name_card"
            android:inputType="text"
            android:windowSoftInputMode="stateAlwaysHidden"
            android:imeOptions="flagNoExtractUi"
            android:paddingStart="@dimen/dp_10"
            android:layout_marginStart="@dimen/dp_15" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/ll_email"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_15">

        <TextView
            android:textSize="@dimen/sp_14"
            android:textColor="@color/head_color"
            android:gravity="center|right"
            android:id="@+id/tv_email"
            android:layout_width="@dimen/dp_60"
            android:layout_height="fill_parent"
            android:text="@string/email" />

        <EditText
            android:textSize="@dimen/sp_11"
            android:textColor="#ffffffff"
            android:textColorHint="@color/hint_color"
            android:id="@+id/et_email"
            android:background="@drawable/ic_input_bg"
            android:layout_width="@dimen/dp_262"
            android:layout_height="@dimen/dp_30"
            android:hint="@string/hint_input_email"
            android:inputType="text"
            android:windowSoftInputMode="stateAlwaysHidden"
            android:imeOptions="flagNoExtractUi"
            android:paddingStart="@dimen/dp_10"
            android:layout_marginStart="@dimen/dp_15" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/ll_qq"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_15">

        <TextView
            android:textSize="@dimen/sp_14"
            android:textColor="@color/head_color"
            android:gravity="center|right"
            android:id="@+id/tv_qq"
            android:layout_width="@dimen/dp_60"
            android:layout_height="fill_parent"
            android:text="QQ" />

        <EditText
            android:textSize="@dimen/sp_11"
            android:textColor="#ffffffff"
            android:textColorHint="@color/hint_color"
            android:id="@+id/et_qq"
            android:background="@drawable/ic_input_bg"
            android:layout_width="@dimen/dp_262"
            android:layout_height="@dimen/dp_30"
            android:hint="@string/hint_input_qq"
            android:inputType="text"
            android:windowSoftInputMode="stateAlwaysHidden"
            android:imeOptions="flagNoExtractUi"
            android:paddingStart="@dimen/dp_10"
            android:layout_marginStart="@dimen/dp_15" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/ll_vx"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_15">

        <TextView
            android:textSize="@dimen/sp_14"
            android:textColor="@color/head_color"
            android:gravity="center|right"
            android:id="@+id/tv_vx"
            android:layout_width="@dimen/dp_60"
            android:layout_height="fill_parent"
            android:text="@string/vx_number" />

        <EditText
            android:textSize="@dimen/sp_11"
            android:textColor="#ffffffff"
            android:textColorHint="@color/hint_color"
            android:id="@+id/et_vx"
            android:background="@drawable/ic_input_bg"
            android:layout_width="@dimen/dp_262"
            android:layout_height="@dimen/dp_30"
            android:hint="@string/hint_input_weixin"
            android:inputType="text"
            android:windowSoftInputMode="stateAlwaysHidden"
            android:imeOptions="flagNoExtractUi"
            android:paddingStart="@dimen/dp_10"
            android:layout_marginStart="@dimen/dp_15" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_15">

        <TextView
            android:textSize="@dimen/sp_14"
            android:textColor="@color/head_color"
            android:gravity="center|right"
            android:layout_width="@dimen/dp_60"
            android:layout_height="fill_parent"
            android:text="@string/verify_code" />

        <EditText
            android:textSize="@dimen/sp_11"
            android:textColor="#ffffffff"
            android:textColorHint="@color/hint_color"
            android:id="@+id/et_verify"
            android:background="@drawable/ic_input_bg"
            android:layout_width="@dimen/dp_170"
            android:layout_height="@dimen/dp_30"
            android:hint="@string/input_verify_code"
            android:maxLength="6"
            android:inputType="number"
            android:windowSoftInputMode="stateAlwaysHidden"
            android:imeOptions="flagNoExtractUi"
            android:paddingStart="@dimen/dp_10"
            android:layout_marginStart="@dimen/dp_15" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent">

            <RelativeLayout
                android:id="@+id/rl_user_verify"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent">

                <ImageButton
                    android:id="@+id/btn_user_verify"
                    android:background="@null"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:src="@drawable/ic_send_verify"
                    android:layout_marginStart="@dimen/dp_10"
                    android:layout_marginEnd="@dimen/dp_10" />

                <TextView
                    android:gravity="center"
                    android:id="@+id/tv_user_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/send_verify_code"
                    android:layout_centerInParent="true" />
            </RelativeLayout>

            <ImageView
                android:id="@+id/img_verify"
                android:background="@color/white_color"
                android:visibility="gone"
                android:layout_width="@dimen/dp_72"
                android:layout_height="@dimen/dp_30"
                android:layout_marginStart="@dimen/dp_10"
                android:layout_marginEnd="@dimen/dp_10" />
        </RelativeLayout>
    </LinearLayout>

    <ImageButton
        android:layout_gravity="center_horizontal"
        android:id="@+id/btn_register_user"
        android:background="@null"
        android:layout_width="@dimen/dp_146"
        android:layout_height="@dimen/dp_50"
        android:layout_marginTop="@dimen/dp_15"
        android:layout_marginBottom="@dimen/dp_20"
        android:src="@drawable/ic_register_dialog" />
</LinearLayout>